--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
               <!-- visa cards -->
               <div class="visaCards">
                 <!-- visa #1 -->
-                <div class="visa bg-blue">
+                <div class="visa bg-dark-blue">
                   <div class="flex">
                     <div class="flex flex-center">
                       <div></div>
@@ -942,7 +942,69 @@
                       />
                     </div>
                   </div>
-                  <p>•••• •••• •••• 4532</p>
+                  <p class="f24 w600">•••• •••• •••• 4532</p>
+                  <div class="text flex">
+                    <div>
+                      <p class="f12 w500">حامل البطاقة</p>
+                      <p class="w600">سيف أسامة</p>
+                    </div>
+                    <div>
+                      <p class="f12 w500">تنتهي</p>
+                      <p class="w600">12/26</p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- visa #2 -->
+                <div class="visa bg-dark-red">
+                  <div class="flex">
+                    <div class="flex flex-center">
+                      <div></div>
+                    </div>
+                    <div class="icon">
+                      <img
+                        src="images/icons/cc-mastercard-brands-solid-full.png"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <p class="f24 w600">•••• •••• •••• 8901</p>
+                  <div class="text flex">
+                    <div>
+                      <p class="f12 w500">حامل البطاقة</p>
+                      <p class="w600">سيف أسامة</p>
+                    </div>
+                    <div>
+                      <p class="f12 w500">تنتهي</p>
+                      <p class="w600">12/26</p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- visa #3 -->
+                <div class="visa bg-blue">
+                  <div class="flex">
+                    <div class="flex flex-center">
+                      <div></div>
+                    </div>
+                    <div class="icon">
+                      <img
+                        src="images/icons/paypal-brands-solid-full.png"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <p class="f24 w600">حساب Paypal</p>
+                  <div class="text flex">
+                    <div>
+                      <p class="f12 w500">الايميل</p>
+                      <p class="w600">seif@example.com</p>
+                    </div>
+                    <div>
+                      <p class="f12 w500">تنتهي</p>
+                      <p class="w600">موثق</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
